--- a/2048.html
+++ b/2048.html
@@ -748,7 +748,7 @@ hr {
     </div>
 
     <div class="above-game">
-    <span class="tag"> 按上下左右或WSAD游戏</span>
+    <span class="tag"> 滑动或按上下左右游戏</span>
       <a class="restart-button">点我开始</a>
     </div>
 
